--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,9 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring-framework.version>4.3.7.RELEASE
         </spring-framework.version>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
